tdf#125358: always update height

Change-Id: I273abe32f1928f5fccb5ba02b3b77958dde58220